Fixed overflow bug on .popup

--- a/1800clothing/carma/templates/scss/components/_costumes.scss
+++ b/1800clothing/carma/templates/scss/components/_costumes.scss
@@ -149,6 +149,7 @@ $navColor: #2E2260;
     background-color: rgba(0, 0, 0, 0.61);
     animation-name: fadeIn;
     animation-duration: 0.3s;
+    overflow: hidden;
     
 
     .popupContent {
